[gd_scene load_steps=11 format=3 uid="uid://d083d45d28pl3"]

[ext_resource type="Script" uid="uid://dwmcx870gjb74" path="res://ui_scenes/camera/game_camera.gd" id="1_ponhy"]
[ext_resource type="PackedScene" uid="uid://cwctu1ofv35ix" path="res://ui_scenes/map/system_map.tscn" id="1_pyc65"]
[ext_resource type="Texture2D" uid="uid://dius8uaclcjlp" path="res://ui_scenes/camera/speedParticle.png" id="3_mrtcm"]
[ext_resource type="Texture2D" uid="uid://b4n7qxstm1edx" path="res://ui_scenes/backgroundLayers/stars.png" id="4_sdxgs"]
[ext_resource type="Texture2D" uid="uid://d1771x22kyqwk" path="res://ui_scenes/backgroundLayers/stars2.png" id="5_mfvj6"]
[ext_resource type="PackedScene" uid="uid://mh4q570jpivc" path="res://ui_scenes/backgrounds/background_layer.tscn" id="6_1d8lj"]
[ext_resource type="Texture2D" uid="uid://dssyoqgq06npa" path="res://ui_scenes/backgrounds/space/empty.png" id="7_a32w2"]
[ext_resource type="PackedScene" uid="uid://daqevwntvcp3o" path="res://ui_scenes/playerHUD/banner/hotbar_banner.tscn" id="7_mxwda"]
[ext_resource type="Texture2D" uid="uid://6dhvxgw525dg" path="res://ui_scenes/backgrounds/space/stars1.png" id="8_unqht"]
[ext_resource type="Texture2D" uid="uid://bxyxfgriwqex7" path="res://ui_scenes/camera/compass.png" id="9_aqc3j"]

[node name="GAME CAMERA" type="Camera2D"]
visibility_layer = 64
ignore_rotation = false
script = ExtResource("1_ponhy")

[node name="Compass" type="Sprite2D" parent="."]
z_index = 225
position = Vector2(187, -123)
texture = ExtResource("9_aqc3j")

[node name="speedPart" type="CPUParticles2D" parent="."]
z_index = -16
rotation = -0.822302
emitting = false
amount = 32
lifetime = 0.15
texture = ExtResource("3_mrtcm")
emission_shape = 3
emission_rect_extents = Vector2(256, 256)
particle_flag_align_y = true
gravity = Vector2(0, 0)
color = Color(1, 1, 1, 0.117647)
hue_variation_min = -1.0
hue_variation_max = 1.0

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
z_index = 803
offset_left = -98.0
offset_top = -98.0
offset_right = 97.0
offset_bottom = 97.0
color = Color(0, 0, 0, 0.866667)

[node name="SystemMap" parent="." instance=ExtResource("1_pyc65")]
visible = false
z_index = 803

[node name="HotbarBanner" parent="." instance=ExtResource("7_mxwda")]
position = Vector2(-201, -151)

[node name="Backgrounds" type="Node2D" parent="."]
z_index = -1000
position = Vector2(-200, -150)

[node name="Space" type="Node2D" parent="Backgrounds"]

[node name="backgroundLayer" parent="Backgrounds/Space" instance=ExtResource("6_1d8lj")]
texture = ExtResource("7_a32w2")
scrollAmount = Vector2(0.04, 0.04)

[node name="backgroundLayer2" parent="Backgrounds/Space" instance=ExtResource("6_1d8lj")]
texture = ExtResource("4_sdxgs")
scrollAmount = Vector2(0.08, 0.08)

[node name="backgroundLayer3" parent="Backgrounds/Space" instance=ExtResource("6_1d8lj")]
texture = ExtResource("5_mfvj6")
scrollAmount = Vector2(0.12, 0.12)

[node name="backgroundLayer4" parent="Backgrounds/Space" instance=ExtResource("6_1d8lj")]
texture = ExtResource("8_unqht")
scrollAmount = Vector2(0.05, 0.05)

[node name="bgHolder" type="Node2D" parent="Backgrounds"]
